--- a/admin_frontend_v2/pure-admin-thin-i18n/locales/zh-CN.yaml
+++ b/admin_frontend_v2/pure-admin-thin-i18n/locales/zh-CN.yaml
@@ -92,17 +92,36 @@ login:
 dashboard:
   title: 管理控制台
   tenantChartsTitle: 租户统计
+  userChartsTitle: 用户统计
   tenantTrend: 租户数量趋势
   tenantStatus: 租户状态分布
   tenantCreationRate: 租户创建速率
   tenantCount: 租户数量
   newTenants: 新增租户
   tenantTotal: 租户总数
+  userGrowthTrend: 用户总量与增长趋势
+  userRoleDistribution: 用户角色分布
+  activeUsers: 活跃用户统计
+  loginHeatmap: 用户登录热力图
+  userCount: 用户数量
+  newUsers: 新增用户
+  userTotal: 用户总数
+  activeRate: 活跃率
+  superAdmin: 超级管理员
+  tenantAdmin: 租户管理员
+  regularUser: 普通用户
+  activeUserCount: 活跃用户数
+  peakHour: 高峰时段
+  lowestHour: 低谷时段
+  totalLogins: 总登录次数
   growthRate: 增长率
   avgGrowth: 平均增长
   loading: 加载中...
   noData: 暂无数据
   fetchDataFailed: 数据加载失败
+  updatingCharts: 更新图表中...
+  fetchAllDataFailed: 获取所有数据失败
+  maxRetryExceeded: 已达到最大重试次数，请检查网络或API状态
   today: 今天
   thisWeek: 本周
   thisMonth: 本月
